Update common files and generated files

--- a/mixer/adapter/bypass/config/adapter.bypass.config.pb.html
+++ b/mixer/adapter/bypass/config/adapter.bypass.config.pb.html
@@ -65,6 +65,30 @@ params: RGFuJ3MgVG9vbHMgYXJlIGNvb2wh...
 
 </td>
 </tr>
+<tr id="Params-backend_address">
+<td><code>backendAddress</code></td>
+<td><code>string</code></td>
+<td>
+<p>The backend address for the remote policy backend.</p>
+
+</td>
+</tr>
+<tr id="Params-params">
+<td><code>params</code></td>
+<td><code><a href="https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any">google.protobuf.Any</a></code></td>
+<td>
+<p>The actual config parameters to send to the remote backend.</p>
+
+</td>
+</tr>
+<tr id="Params-session_based">
+<td><code>sessionBased</code></td>
+<td><code>bool</code></td>
+<td>
+<p>Indicates whether the protocol is session based or not.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
