--- a/mixer/adapter/stackdriver/config/adapter.stackdriver.config.pb.html
+++ b/mixer/adapter/stackdriver/config/adapter.stackdriver.config.pb.html
@@ -108,6 +108,76 @@ or <code>./testdata/my-test-account-creds.json</code>.</p>
 
 </td>
 </tr>
+<tr id="Params-endpoint">
+<td><code>endpoint</code></td>
+<td><code>string</code></td>
+<td>
+<p>Endpoint URL to send stackdriver data - leave empty to use the
+StackDriver SDK&rsquo;s default value (monitoring.googleapis.com).</p>
+
+</td>
+</tr>
+<tr id="Params-project_id">
+<td><code>projectId</code></td>
+<td><code>string</code></td>
+<td>
+<p>GCP Project to attach metrics to.</p>
+
+</td>
+</tr>
+<tr id="Params-app_credentials" class="oneof oneof-start">
+<td><code>appCredentials</code></td>
+<td><code>bool (oneof)</code></td>
+<td>
+<p>Use Google&rsquo;s Application Default Credentials to authorize calls made
+by the StackDriver SDK.</p>
+
+<p><a href="https://developers.google.com/identity/protocols/application-default-credentials">See Google&rsquo;s documentation</a>.</p>
+
+</td>
+</tr>
+<tr id="Params-api_key" class="oneof">
+<td><code>apiKey</code></td>
+<td><code>string (oneof)</code></td>
+<td>
+<p>The API Key to be used for auth. API Key is no longer supported, use service account instead.</p>
+
+</td>
+</tr>
+<tr id="Params-service_account_path" class="oneof">
+<td><code>serviceAccountPath</code></td>
+<td><code>string (oneof)</code></td>
+<td>
+<p>The path to a Google service account credential file, relative to
+the Mixer. E.g. <code>/etc/opt/mixer/gcp-serviceaccount-creds.json</code>
+or <code>./testdata/my-test-account-creds.json</code>.</p>
+
+</td>
+</tr>
+<tr id="Params-metric_info">
+<td><code>metricInfo</code></td>
+<td><code>map&lt;string,&nbsp;<a href="#Params-MetricInfo">Params.MetricInfo</a>&gt;</code></td>
+<td>
+<p>A map of Istio metric name to Stackdriver metric info.</p>
+
+</td>
+</tr>
+<tr id="Params-log_info">
+<td><code>logInfo</code></td>
+<td><code>map&lt;string,&nbsp;<a href="#Params-LogInfo">Params.LogInfo</a>&gt;</code></td>
+<td>
+<p>A map of Istio LogEntry name to Stackdriver log info.</p>
+
+</td>
+</tr>
+<tr id="Params-trace">
+<td><code>trace</code></td>
+<td><code><a href="#Params-Trace">Params.Trace</a></code></td>
+<td>
+<p>Stackdriver Trace configuration.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -124,6 +194,41 @@ or <code>./testdata/my-test-account-creds.json</code>.</p>
 </tr>
 </thead>
 <tbody>
+<tr id="Params-LogInfo-label_names">
+<td><code>labelNames</code></td>
+<td><code>string[]</code></td>
+<td>
+<p>The logging template provides a set of variables; these list the subset of variables that should be used to
+form Stackdriver labels for the log entry.</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-payload_template">
+<td><code>payloadTemplate</code></td>
+<td><code>string</code></td>
+<td>
+<p>A golang text/template template that will be executed to construct the payload for this log entry.
+It will be given the full set of variables for the log to use to construct its result.</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-http_mapping">
+<td><code>httpMapping</code></td>
+<td><code><a href="#Params-LogInfo-HttpRequestMapping">Params.LogInfo.HttpRequestMapping</a></code></td>
+<td>
+<p>If an HttpRequestMapping is provided, a HttpRequest object will be filled out for this log entry using the
+variables named in the mapping to populate the fields of the request struct from the instance&rsquo;s variables.</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-sink_info">
+<td><code>sinkInfo</code></td>
+<td><code><a href="#Params-LogInfo-SinkInfo">Params.LogInfo.SinkInfo</a></code></td>
+<td>
+<p>If SinkInfo is provided, Stackriver logs would be exported to that sink.</p>
+
+</td>
+</tr>
 <tr id="Params-LogInfo-label_names">
 <td><code>labelNames</code></td>
 <td><code>string[]</code></td>
@@ -176,6 +281,86 @@ See https://godoc.org/cloud.google.com/go/logging#HTTPRequest</p>
 </tr>
 </thead>
 <tbody>
+<tr id="Params-LogInfo-HttpRequestMapping-status">
+<td><code>status</code></td>
+<td><code>string</code></td>
+<td>
+<p>template variable name to map into HTTPRequest.Status</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-HttpRequestMapping-request_size">
+<td><code>requestSize</code></td>
+<td><code>string</code></td>
+<td>
+<p>template variable name to map into HTTPRequest.RequestSize</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-HttpRequestMapping-response_size">
+<td><code>responseSize</code></td>
+<td><code>string</code></td>
+<td>
+<p>template variable name to map into HTTPRequest.ResponseSize</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-HttpRequestMapping-latency">
+<td><code>latency</code></td>
+<td><code>string</code></td>
+<td>
+<p>template variable name to map into HTTPRequest.Latency</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-HttpRequestMapping-local_ip">
+<td><code>localIp</code></td>
+<td><code>string</code></td>
+<td>
+<p>template variable name to map into HTTPRequest.LocalIP</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-HttpRequestMapping-remote_ip">
+<td><code>remoteIp</code></td>
+<td><code>string</code></td>
+<td>
+<p>template variable name to map into HTTPRequest.RemoteIP</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-HttpRequestMapping-url">
+<td><code>url</code></td>
+<td><code>string</code></td>
+<td>
+<p>template variable name to map into HTTPRequest.Request.Url</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-HttpRequestMapping-method">
+<td><code>method</code></td>
+<td><code>string</code></td>
+<td>
+<p>template variable name to map into HTTPRequest.RequestMethod</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-HttpRequestMapping-user_agent">
+<td><code>userAgent</code></td>
+<td><code>string</code></td>
+<td>
+<p>template variable name to map into HTTPRequest.UserAgent</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-HttpRequestMapping-referer">
+<td><code>referer</code></td>
+<td><code>string</code></td>
+<td>
+<p>template variable name to map into HTTPRequest.Referer</p>
+
+</td>
+</tr>
 <tr id="Params-LogInfo-HttpRequestMapping-status">
 <td><code>status</code></td>
 <td><code>string</code></td>
@@ -348,6 +533,73 @@ Upate sink destination.</p>
 
 </td>
 </tr>
+<tr id="Params-LogInfo-SinkInfo-id">
+<td><code>id</code></td>
+<td><code>string</code></td>
+<td>
+<p>Client assigned sink identifier.</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-SinkInfo-destination">
+<td><code>destination</code></td>
+<td><code>string</code></td>
+<td>
+<p>Export Destination.</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-SinkInfo-filter">
+<td><code>filter</code></td>
+<td><code>string</code></td>
+<td>
+<p>Filter that specifies any filtering to be done on logs.</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-SinkInfo-UniqueWriterIdentity">
+<td><code>UniqueWriterIdentity</code></td>
+<td><code>bool</code></td>
+<td>
+<p>Determines the kind of IAM identity returned as WriterIdentity in the new
+sink. If this value is omitted or set to false, and if the sink&rsquo;s parent is a
+project, then the value returned as WriterIdentity is the same group or
+service account used by Stackdriver Logging before the addition of writer
+identities to the API. The sink&rsquo;s destination must be in the same project as
+the sink itself.</p>
+
+<p>If this field is set to true, or if the sink is owned by a non-project
+resource such as an organization, then the value of WriterIdentity will
+be a unique service account used only for exports from the new sink.</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-SinkInfo-UpdateDestination">
+<td><code>UpdateDestination</code></td>
+<td><code>bool</code></td>
+<td>
+<p>These fields apply only to UpdateSinkOpt calls. The corresponding sink field
+is updated if and only if the Update field is true.
+Upate sink destination.</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-SinkInfo-UpdateFilter">
+<td><code>UpdateFilter</code></td>
+<td><code>bool</code></td>
+<td>
+<p>Update sink filter.</p>
+
+</td>
+</tr>
+<tr id="Params-LogInfo-SinkInfo-UpdateIncludeChildren">
+<td><code>UpdateIncludeChildren</code></td>
+<td><code>bool</code></td>
+<td>
+<p>Update includes children.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -365,6 +617,44 @@ See https://github.com/googleapis/googleapis/blob/master/google/api/metric.proto
 </tr>
 </thead>
 <tbody>
+<tr id="Params-MetricInfo-kind">
+<td><code>kind</code></td>
+<td><code><a href="#google-api-MetricDescriptor-MetricKind">google.api.MetricDescriptor.MetricKind</a></code></td>
+<td>
+<p>The kind of measurement for a metric, which describes how the data is reported. Ex: Gauge.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-value">
+<td><code>value</code></td>
+<td><code><a href="#google-api-MetricDescriptor-ValueType">google.api.MetricDescriptor.ValueType</a></code></td>
+<td>
+<p>The type of the metric&rsquo;s value. Ex: Distribution.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-buckets">
+<td><code>buckets</code></td>
+<td><code><a href="#Params-MetricInfo-BucketsDefinition">Params.MetricInfo.BucketsDefinition</a></code></td>
+<td>
+<p>For metrics with a metric value of DISTRIBUTION, this provides a mechanism
+for configuring the buckets that will be used to store the aggregated values.
+This field must be provided for metrics declared to be of type DISTRIBUTION.
+This field will be ignored for non-distribution metric kinds.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-metric_type">
+<td><code>metricType</code></td>
+<td><code>string</code></td>
+<td>
+<p>Stackdriver metric type name, e.g.
+istio.io/service/server/request_count. If this is not provided, a
+concantenation of custom metric prefix (custom.googleapis.com/) and
+Istio metric name will be used.</p>
+
+</td>
+</tr>
 <tr id="Params-MetricInfo-kind">
 <td><code>kind</code></td>
 <td><code><a href="#google-api-MetricDescriptor-MetricKind">google.api.MetricDescriptor.MetricKind</a></code></td>
@@ -445,6 +735,30 @@ dependencies it doesn&rsquo;t actually use.</p>
 
 </td>
 </tr>
+<tr id="Params-MetricInfo-BucketsDefinition-linear_buckets" class="oneof oneof-start">
+<td><code>linearBuckets</code></td>
+<td><code><a href="#Params-MetricInfo-BucketsDefinition-Linear">Params.MetricInfo.BucketsDefinition.Linear (oneof)</a></code></td>
+<td>
+<p>The linear buckets.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-exponential_buckets" class="oneof">
+<td><code>exponentialBuckets</code></td>
+<td><code><a href="#Params-MetricInfo-BucketsDefinition-Exponential">Params.MetricInfo.BucketsDefinition.Exponential (oneof)</a></code></td>
+<td>
+<p>The exponential buckets.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-explicit_buckets" class="oneof">
+<td><code>explicitBuckets</code></td>
+<td><code><a href="#Params-MetricInfo-BucketsDefinition-Explicit">Params.MetricInfo.BucketsDefinition.Explicit (oneof)</a></code></td>
+<td>
+<p>The explicit buckets.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -481,6 +795,14 @@ element is the common boundary of the overflow and underflow buckets.</p>
 
 </td>
 </tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Explicit-bounds">
+<td><code>bounds</code></td>
+<td><code>double[]</code></td>
+<td>
+<p>The values must be monotonically increasing.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -509,6 +831,30 @@ buckets are the underflow and overflow buckets.</p>
 </tr>
 </thead>
 <tbody>
+<tr id="Params-MetricInfo-BucketsDefinition-Exponential-num_finite_buckets">
+<td><code>numFiniteBuckets</code></td>
+<td><code>int32</code></td>
+<td>
+<p>Must be greater than 0.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Exponential-growth_factor">
+<td><code>growthFactor</code></td>
+<td><code>double</code></td>
+<td>
+<p>Must be greater than 1.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Exponential-scale">
+<td><code>scale</code></td>
+<td><code>double</code></td>
+<td>
+<p>Must be greater than 0.</p>
+
+</td>
+</tr>
 <tr id="Params-MetricInfo-BucketsDefinition-Exponential-num_finite_buckets">
 <td><code>numFiniteBuckets</code></td>
 <td><code>int32</code></td>
@@ -585,6 +931,30 @@ buckets are the underflow and overflow buckets.</p>
 
 </td>
 </tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Linear-num_finite_buckets">
+<td><code>numFiniteBuckets</code></td>
+<td><code>int32</code></td>
+<td>
+<p>Must be greater than 0.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Linear-width">
+<td><code>width</code></td>
+<td><code>double</code></td>
+<td>
+<p>Must be greater than 0.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Linear-offset">
+<td><code>offset</code></td>
+<td><code>double</code></td>
+<td>
+<p>Lower bound of the first bucket.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -601,6 +971,14 @@ buckets are the underflow and overflow buckets.</p>
 </tr>
 </thead>
 <tbody>
+<tr id="Params-Trace-sample_probability">
+<td><code>sampleProbability</code></td>
+<td><code>double</code></td>
+<td>
+<p>Proability that a particular trace ID will be sampled.</p>
+
+</td>
+</tr>
 <tr id="Params-Trace-sample_probability">
 <td><code>sampleProbability</code></td>
 <td><code>double</code></td>
@@ -656,6 +1034,38 @@ points.</p>
 
 </td>
 </tr>
+<tr id="google-api-MetricDescriptor-MetricKind-METRIC_KIND_UNSPECIFIED">
+<td><code>METRIC_KIND_UNSPECIFIED</code></td>
+<td>
+<p>Do not use this default value.</p>
+
+</td>
+</tr>
+<tr id="google-api-MetricDescriptor-MetricKind-GAUGE">
+<td><code>GAUGE</code></td>
+<td>
+<p>An instantaneous measurement of a value.</p>
+
+</td>
+</tr>
+<tr id="google-api-MetricDescriptor-MetricKind-DELTA">
+<td><code>DELTA</code></td>
+<td>
+<p>The change in a value during a time interval.</p>
+
+</td>
+</tr>
+<tr id="google-api-MetricDescriptor-MetricKind-CUMULATIVE">
+<td><code>CUMULATIVE</code></td>
+<td>
+<p>A value accumulated over a time interval.  Cumulative
+measurements in a time series should have the same start time
+and increasing end times, until an event resets the cumulative
+value to zero and sets a new start time for the following
+points.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -671,6 +1081,57 @@ points.</p>
 </tr>
 </thead>
 <tbody>
+<tr id="google-api-MetricDescriptor-ValueType-VALUE_TYPE_UNSPECIFIED">
+<td><code>VALUE_TYPE_UNSPECIFIED</code></td>
+<td>
+<p>Do not use this default value.</p>
+
+</td>
+</tr>
+<tr id="google-api-MetricDescriptor-ValueType-BOOL">
+<td><code>BOOL</code></td>
+<td>
+<p>The value is a boolean.
+This value type can be used only if the metric kind is <code>GAUGE</code>.</p>
+
+</td>
+</tr>
+<tr id="google-api-MetricDescriptor-ValueType-INT64">
+<td><code>INT64</code></td>
+<td>
+<p>The value is a signed 64-bit integer.</p>
+
+</td>
+</tr>
+<tr id="google-api-MetricDescriptor-ValueType-DOUBLE">
+<td><code>DOUBLE</code></td>
+<td>
+<p>The value is a double precision floating point number.</p>
+
+</td>
+</tr>
+<tr id="google-api-MetricDescriptor-ValueType-STRING">
+<td><code>STRING</code></td>
+<td>
+<p>The value is a text string.
+This value type can be used only if the metric kind is <code>GAUGE</code>.</p>
+
+</td>
+</tr>
+<tr id="google-api-MetricDescriptor-ValueType-DISTRIBUTION">
+<td><code>DISTRIBUTION</code></td>
+<td>
+<p>The value is a <em><code>Distribution</code></em>.</p>
+
+</td>
+</tr>
+<tr id="google-api-MetricDescriptor-ValueType-MONEY">
+<td><code>MONEY</code></td>
+<td>
+<p>The value is money.</p>
+
+</td>
+</tr>
 <tr id="google-api-MetricDescriptor-ValueType-VALUE_TYPE_UNSPECIFIED">
 <td><code>VALUE_TYPE_UNSPECIFIED</code></td>
 <td>
