--- a/mixer/adapter/zipkin/config/adapter.zipkin.config.pb.html
+++ b/mixer/adapter/zipkin/config/adapter.zipkin.config.pb.html
@@ -46,6 +46,27 @@ Defaults to 0 (sampling disabled) if unset.</p>
 
 </td>
 </tr>
+<tr id="Params-url">
+<td><code>url</code></td>
+<td><code>string</code></td>
+<td>
+<p>URL of Zipkin HTTP endpoint.</p>
+
+<p>Required.</p>
+
+</td>
+</tr>
+<tr id="Params-sample_probability">
+<td><code>sampleProbability</code></td>
+<td><code>double</code></td>
+<td>
+<p>Uniform probability that a trace will be sampled.
+Defaults to 0 (sampling disabled) if unset.</p>
+
+<p>Optional.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
