--- a/mixer/test/keyval/keyval.pb.html
+++ b/mixer/test/keyval/keyval.pb.html
@@ -25,6 +25,14 @@ number_of_entries: 1
 
 </td>
 </tr>
+<tr id="Params-table">
+<td><code>table</code></td>
+<td><code>map&lt;string,&nbsp;string&gt;</code></td>
+<td>
+<p>Lookup table</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
