--- a/security/proto/istio.v1.auth.pb.html
+++ b/security/proto/istio.v1.auth.pb.html
@@ -52,6 +52,30 @@ number_of_entries: 3
 
 </td>
 </tr>
+<tr id="IstioCertificateRequest-csr">
+<td><code>csr</code></td>
+<td><code>string</code></td>
+<td>
+<p>PEM-encoded certificate request.</p>
+
+</td>
+</tr>
+<tr id="IstioCertificateRequest-subject_id">
+<td><code>subjectId</code></td>
+<td><code>string</code></td>
+<td>
+<p>Optional subject ID field.</p>
+
+</td>
+</tr>
+<tr id="IstioCertificateRequest-validity_duration">
+<td><code>validityDuration</code></td>
+<td><code>int64</code></td>
+<td>
+<p>Optional: requested certificate validity period, in seconds.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -68,6 +92,15 @@ number_of_entries: 3
 </tr>
 </thead>
 <tbody>
+<tr id="IstioCertificateResponse-cert_chain">
+<td><code>certChain</code></td>
+<td><code>string[]</code></td>
+<td>
+<p>PEM-encoded certificate chain.
+Leaf cert is element &lsquo;0&rsquo;. Root cert is element &lsquo;n&rsquo;.</p>
+
+</td>
+</tr>
 <tr id="IstioCertificateResponse-cert_chain">
 <td><code>certChain</code></td>
 <td><code>string[]</code></td>
