--- a/mixer/adapter/circonus/config/adapter.circonus.config.pb.html
+++ b/mixer/adapter/circonus/config/adapter.circonus.config.pb.html
@@ -47,6 +47,20 @@ number_of_entries: 3
 <td>
 </td>
 </tr>
+<tr id="Params-submission_url">
+<td><code>submissionUrl</code></td>
+<td><code>string</code></td>
+<td>
+<p>Circonus SubmissionURL to HTTPTrap check</p>
+
+</td>
+</tr>
+<tr id="Params-metrics">
+<td><code>metrics</code></td>
+<td><code><a href="#Params-MetricInfo">Params.MetricInfo[]</a></code></td>
+<td>
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -77,6 +91,20 @@ number_of_entries: 3
 <td>
 </td>
 </tr>
+<tr id="Params-MetricInfo-name">
+<td><code>name</code></td>
+<td><code>string</code></td>
+<td>
+<p>name</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-type">
+<td><code>type</code></td>
+<td><code><a href="#Params-MetricInfo-Type">Params.MetricInfo.Type</a></code></td>
+<td>
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -92,6 +120,26 @@ number_of_entries: 3
 </tr>
 </thead>
 <tbody>
+<tr id="Params-MetricInfo-Type-UNKNOWN">
+<td><code>UNKNOWN</code></td>
+<td>
+</td>
+</tr>
+<tr id="Params-MetricInfo-Type-COUNTER">
+<td><code>COUNTER</code></td>
+<td>
+</td>
+</tr>
+<tr id="Params-MetricInfo-Type-GAUGE">
+<td><code>GAUGE</code></td>
+<td>
+</td>
+</tr>
+<tr id="Params-MetricInfo-Type-DISTRIBUTION">
+<td><code>DISTRIBUTION</code></td>
+<td>
+</td>
+</tr>
 <tr id="Params-MetricInfo-Type-UNKNOWN">
 <td><code>UNKNOWN</code></td>
 <td>
