--- a/mixer/adapter/fluentd/config/adapter.fluentd.config.pb.html
+++ b/mixer/adapter/fluentd/config/adapter.fluentd.config.pb.html
@@ -97,6 +97,50 @@ Default to 1m.</p>
 
 </td>
 </tr>
+<tr id="Params-address">
+<td><code>address</code></td>
+<td><code>string</code></td>
+<td>
+<p>Address of listening fluentd daemon. Example: fluentd-server:24224
+Default value is localhost:24224</p>
+
+</td>
+</tr>
+<tr id="Params-integer_duration">
+<td><code>integerDuration</code></td>
+<td><code>bool</code></td>
+<td>
+<p>Convert attributes of type duration to integers of unit ms in
+logs. Default behaviour is a string representation including
+unit.</p>
+
+</td>
+</tr>
+<tr id="Params-instance_buffer_size">
+<td><code>instanceBufferSize</code></td>
+<td><code>int64</code></td>
+<td>
+<p>Controls the size of the queue of log entries awaiting processing by the
+data push goroutine. This impacts the overall size of the backlog of
+log entries that the handler will accept. If the handler falls behind and
+the number of outstanding instances exceeds this limit, the handler will
+begin to drop log entries.
+Defaults to 1024.</p>
+
+</td>
+</tr>
+<tr id="Params-max_batch_size_bytes">
+<td><code>maxBatchSizeBytes</code></td>
+<td><code>int64</code></td>
+<td>
+<p>Controls the number of data bytes that are encoded and buffered by the handler before
+they are pushed to the fluentd backend. This impacts the size and frequency of requests
+sent to the fluentd backend. Once the buffer exceeds this limit, the handler will attempt to push
+data to the backend.
+Defaults to 8,388,608 (8 MiB).</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
