--- a/mixer/adapter/kubernetesenv/config/adapter.kubernetesenv.config.pb.html
+++ b/mixer/adapter/kubernetesenv/config/adapter.kubernetesenv.config.pb.html
@@ -84,6 +84,41 @@ set then <code>cluster_registries_namespace</code> defaults to &ldquo;istio-syst
 
 </td>
 </tr>
+<tr id="Params-kubeconfig_path">
+<td><code>kubeconfigPath</code></td>
+<td><code>string</code></td>
+<td>
+<p>File path to discover <code>kubeconfig</code>. For in-cluster configuration,
+this should be left unset. For local configuration, this should
+be set to the path of a <code>kubeconfig</code> file that can be used to
+reach a kubernetes API server.</p>
+
+<p>NOTE: The <code>kubernetesenv</code> adapter will use the value of the <code>KUBECONFIG</code> environment variable
+in the case where it is set (overriding any value configured
+through this proto).</p>
+
+<p>Default: &ldquo;&rdquo; (unset)</p>
+
+</td>
+</tr>
+<tr id="Params-cluster_registries_namespace">
+<td><code>clusterRegistriesNamespace</code></td>
+<td><code>string</code></td>
+<td>
+<p>Namespace of the secret created for multicluster support.</p>
+
+<p>Details on multicluster and the Kubernetes secret required to
+access the remote cluster&rsquo;s credentials can be found in
+<a href="https://istio.io/docs/setup/install/multicluster/">multicluster install</a>.</p>
+
+<p>NOTE: If <code>cluster_registries_namespace</code> is not set then the environment
+variable <code>POD_NAMESPACE</code> is checked/used. If <code>POD_NAMESPACE</code> is not
+set then <code>cluster_registries_namespace</code> defaults to &ldquo;istio-system&rdquo;.</p>
+
+<p>Default: &ldquo;istio-system&rdquo;</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
