--- a/mixer/adapter/opa/config/adapter.opa.config.pb.html
+++ b/mixer/adapter/opa/config/adapter.opa.config.pb.html
@@ -83,6 +83,33 @@ instead of disabling the adapter, close the client request</p>
 
 </td>
 </tr>
+<tr id="Params-policy">
+<td><code>policy</code></td>
+<td><code>string[]</code></td>
+<td>
+<p>List of OPA policies</p>
+
+</td>
+</tr>
+<tr id="Params-check_method">
+<td><code>checkMethod</code></td>
+<td><code>string</code></td>
+<td>
+<p>Query method to check.
+Format: <code>data.&lt;package name&gt;.&lt;method name&gt;</code></p>
+
+</td>
+</tr>
+<tr id="Params-fail_close">
+<td><code>failClose</code></td>
+<td><code>bool</code></td>
+<td>
+<p>Close the client request when adapter has a issue.
+If failClose is set to true and there is a runtime error,
+instead of disabling the adapter, close the client request</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
