--- a/mixer/adapter/prometheus/config/adapter.prometheus.config.pb.html
+++ b/mixer/adapter/prometheus/config/adapter.prometheus.config.pb.html
@@ -54,6 +54,33 @@ that the adapter will maintain over its lifetime.</p>
 
 </td>
 </tr>
+<tr id="Params-metrics">
+<td><code>metrics</code></td>
+<td><code><a href="#Params-MetricInfo">Params.MetricInfo[]</a></code></td>
+<td>
+<p>The set of metrics to represent in Prometheus. If a metric is defined in Istio but doesn&rsquo;t have a corresponding
+shape here, it will not be populated at runtime.</p>
+
+</td>
+</tr>
+<tr id="Params-metrics_expiration_policy">
+<td><code>metricsExpirationPolicy</code></td>
+<td><code><a href="#Params-MetricsExpirationPolicy">Params.MetricsExpirationPolicy</a></code></td>
+<td>
+<p>Optional. The rate at which to expire metrics from the adapter. This option controls the amount of metric data
+that the adapter will maintain over its lifetime.</p>
+
+<p>EXPERIMENTAL: This feature should only be used in advanced cases.</p>
+
+<p>Example config stanza:</p>
+
+<pre><code class="language-yaml">metricsExpirationPolicy:
+  metricsExpiryDuration: &quot;5s&quot;
+  expiryCheckIntervalDuration: &quot;1s&quot;
+</code></pre>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -70,6 +97,74 @@ that the adapter will maintain over its lifetime.</p>
 </tr>
 </thead>
 <tbody>
+<tr id="Params-MetricInfo-namespace">
+<td><code>namespace</code></td>
+<td><code>string</code></td>
+<td>
+<p>Optional. The namespace is used as a prefix on the metric names.
+An example: for a metric named <code>requests_total</code> with a namespace of <code>istio</code>,
+the full metric name becomes <code>istio_requests_total</code>.
+NOTE: The specified namespace should be a prometheus-safe name. If not, the adapter
+will attempt to convert the namespace to a prometheus-safe name.
+NOTE: Changing the value for this will potentially impact downstream integrations
+and should be used with caution.
+Default value: <code>istio</code>.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-name">
+<td><code>name</code></td>
+<td><code>string</code></td>
+<td>
+<p>Recommended. The name is used to register the prometheus metric.
+It must be unique across all prometheus metrics as prometheus does not allow duplicate names.
+If name is not specified a sanitized version of instance_name is used.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-instance_name">
+<td><code>instanceName</code></td>
+<td><code>string</code></td>
+<td>
+<p>Required. The name is the fully qualified name of the Istio metric instance
+that this MetricInfo processes.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-description">
+<td><code>description</code></td>
+<td><code>string</code></td>
+<td>
+<p>Optional. A human readable description of this metric.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-kind">
+<td><code>kind</code></td>
+<td><code><a href="#Params-MetricInfo-Kind">Params.MetricInfo.Kind</a></code></td>
+<td>
+</td>
+</tr>
+<tr id="Params-MetricInfo-buckets">
+<td><code>buckets</code></td>
+<td><code><a href="#Params-MetricInfo-BucketsDefinition">Params.MetricInfo.BucketsDefinition</a></code></td>
+<td>
+<p>For metrics with a metric kind of DISTRIBUTION, this provides a mechanism
+for configuring the buckets that will be used to store the aggregated values.
+This field must be provided for metrics declared to be of type DISTRIBUTION.
+This field will be ignored for non-distribution metric kinds.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-label_names">
+<td><code>labelNames</code></td>
+<td><code>string[]</code></td>
+<td>
+<p>The names of labels to use: these need to match the dimensions of the Istio metric.
+TODO: see if we can remove this and rely on only the dimensions in the future.</p>
+
+</td>
+</tr>
 <tr id="Params-MetricInfo-namespace">
 <td><code>namespace</code></td>
 <td><code>string</code></td>
@@ -178,6 +273,30 @@ TODO: see if we can remove this and rely on only the dimensions in the future.</
 
 </td>
 </tr>
+<tr id="Params-MetricInfo-BucketsDefinition-linear_buckets" class="oneof oneof-start">
+<td><code>linearBuckets</code></td>
+<td><code><a href="#Params-MetricInfo-BucketsDefinition-Linear">Params.MetricInfo.BucketsDefinition.Linear (oneof)</a></code></td>
+<td>
+<p>The linear buckets.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-exponential_buckets" class="oneof">
+<td><code>exponentialBuckets</code></td>
+<td><code><a href="#Params-MetricInfo-BucketsDefinition-Exponential">Params.MetricInfo.BucketsDefinition.Exponential (oneof)</a></code></td>
+<td>
+<p>The exponential buckets.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-explicit_buckets" class="oneof">
+<td><code>explicitBuckets</code></td>
+<td><code><a href="#Params-MetricInfo-BucketsDefinition-Explicit">Params.MetricInfo.BucketsDefinition.Explicit (oneof)</a></code></td>
+<td>
+<p>The explicit buckets.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -214,6 +333,14 @@ element is the common boundary of the overflow and underflow buckets.</p>
 
 </td>
 </tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Explicit-bounds">
+<td><code>bounds</code></td>
+<td><code>double[]</code></td>
+<td>
+<p>The values must be monotonically increasing.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -242,6 +369,30 @@ buckets are the underflow and overflow buckets.</p>
 </tr>
 </thead>
 <tbody>
+<tr id="Params-MetricInfo-BucketsDefinition-Exponential-num_finite_buckets">
+<td><code>numFiniteBuckets</code></td>
+<td><code>int32</code></td>
+<td>
+<p>Must be greater than 0.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Exponential-growth_factor">
+<td><code>growthFactor</code></td>
+<td><code>double</code></td>
+<td>
+<p>Must be greater than 1.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Exponential-scale">
+<td><code>scale</code></td>
+<td><code>double</code></td>
+<td>
+<p>Must be greater than 0.</p>
+
+</td>
+</tr>
 <tr id="Params-MetricInfo-BucketsDefinition-Exponential-num_finite_buckets">
 <td><code>numFiniteBuckets</code></td>
 <td><code>int32</code></td>
@@ -318,6 +469,30 @@ buckets are the underflow and overflow buckets.</p>
 
 </td>
 </tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Linear-num_finite_buckets">
+<td><code>numFiniteBuckets</code></td>
+<td><code>int32</code></td>
+<td>
+<p>Must be greater than 0.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Linear-width">
+<td><code>width</code></td>
+<td><code>double</code></td>
+<td>
+<p>Must be greater than 0.</p>
+
+</td>
+</tr>
+<tr id="Params-MetricInfo-BucketsDefinition-Linear-offset">
+<td><code>offset</code></td>
+<td><code>double</code></td>
+<td>
+<p>Lower bound of the first bucket.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -333,6 +508,26 @@ buckets are the underflow and overflow buckets.</p>
 </tr>
 </thead>
 <tbody>
+<tr id="Params-MetricInfo-Kind-UNSPECIFIED">
+<td><code>UNSPECIFIED</code></td>
+<td>
+</td>
+</tr>
+<tr id="Params-MetricInfo-Kind-GAUGE">
+<td><code>GAUGE</code></td>
+<td>
+</td>
+</tr>
+<tr id="Params-MetricInfo-Kind-COUNTER">
+<td><code>COUNTER</code></td>
+<td>
+</td>
+</tr>
+<tr id="Params-MetricInfo-Kind-DISTRIBUTION">
+<td><code>DISTRIBUTION</code></td>
+<td>
+</td>
+</tr>
 <tr id="Params-MetricInfo-Kind-UNSPECIFIED">
 <td><code>UNSPECIFIED</code></td>
 <td>
