--- a/mixer/adapter/statsd/config/adapter.statsd.config.pb.html
+++ b/mixer/adapter/statsd/config/adapter.statsd.config.pb.html
@@ -77,6 +77,47 @@ same (private) network 1432 bytes is recommended for better performance.</p>
 
 </td>
 </tr>
+<tr id="Params-address">
+<td><code>address</code></td>
+<td><code>string</code></td>
+<td>
+<p>Address of the statsd server, e.g. localhost:8125</p>
+
+</td>
+</tr>
+<tr id="Params-prefix">
+<td><code>prefix</code></td>
+<td><code>string</code></td>
+<td>
+<p>Metric prefix, do not specify for no prefix</p>
+
+</td>
+</tr>
+<tr id="Params-flush_bytes">
+<td><code>flushBytes</code></td>
+<td><code>int32</code></td>
+<td>
+<p>Maximum UDP packet size to send; if not specified defaults to 512 bytes. If the statsd server is running on the
+same (private) network 1432 bytes is recommended for better performance.</p>
+
+</td>
+</tr>
+<tr id="Params-sampling_rate">
+<td><code>samplingRate</code></td>
+<td><code>float</code></td>
+<td>
+<p>Chance that any particular metric is sampled when incremented; can take the range [0, 1], defaults to 1 if unspecified.</p>
+
+</td>
+</tr>
+<tr id="Params-metrics">
+<td><code>metrics</code></td>
+<td><code>map&lt;string,&nbsp;<a href="#Params-MetricInfo">Params.MetricInfo</a>&gt;</code></td>
+<td>
+<p>Map of metric name -&gt; info. If a metric&rsquo;s name is not in the map then the metric will not be exported to statsd.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -113,6 +154,26 @@ we use the template:
 
 </td>
 </tr>
+<tr id="Params-MetricInfo-type">
+<td><code>type</code></td>
+<td><code><a href="#Params-MetricInfo-Type">Params.MetricInfo.Type</a></code></td>
+<td>
+</td>
+</tr>
+<tr id="Params-MetricInfo-name_template">
+<td><code>nameTemplate</code></td>
+<td><code>string</code></td>
+<td>
+<p>The template will be filled with values from the metric&rsquo;s labels and the resulting string will be used as
+the statsd metric name. This allows easier creation of statsd metrics like <code>action_name-response_code</code>.
+The template strings must conform to go&rsquo;s text/template syntax. For the example of <code>action_name-response_code</code>,
+we use the template:
+   <code>&lbrace;&lbrace;.apiMethod}}-&lbrace;&lbrace;.responseCode}}</code></p>
+
+<p>If name_template is the empty string the Istio metric name will be used for statsd metric&rsquo;s name.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -128,6 +189,26 @@ we use the template:
 </tr>
 </thead>
 <tbody>
+<tr id="Params-MetricInfo-Type-UNKNOWN">
+<td><code>UNKNOWN</code></td>
+<td>
+</td>
+</tr>
+<tr id="Params-MetricInfo-Type-COUNTER">
+<td><code>COUNTER</code></td>
+<td>
+</td>
+</tr>
+<tr id="Params-MetricInfo-Type-GAUGE">
+<td><code>GAUGE</code></td>
+<td>
+</td>
+</tr>
+<tr id="Params-MetricInfo-Type-DISTRIBUTION">
+<td><code>DISTRIBUTION</code></td>
+<td>
+</td>
+</tr>
 <tr id="Params-MetricInfo-Type-UNKNOWN">
 <td><code>UNKNOWN</code></td>
 <td>
