--- a/pkg/test/fakes/policy/policy.pb.html
+++ b/pkg/test/fakes/policy/policy.pb.html
@@ -36,6 +36,22 @@ supports checknothing and keyval template.</p>
 
 </td>
 </tr>
+<tr id="Params-check_params">
+<td><code>checkParams</code></td>
+<td><code><a href="#Params-CheckParams">Params.CheckParams</a></code></td>
+<td>
+<p>Specify check related params.</p>
+
+</td>
+</tr>
+<tr id="Params-table">
+<td><code>table</code></td>
+<td><code>map&lt;string,&nbsp;string&gt;</code></td>
+<td>
+<p>Specify route directive related params.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -52,6 +68,30 @@ supports checknothing and keyval template.</p>
 </tr>
 </thead>
 <tbody>
+<tr id="Params-CheckParams-check_allow">
+<td><code>checkAllow</code></td>
+<td><code>bool</code></td>
+<td>
+<p>Controls that request should be allowed or not.</p>
+
+</td>
+</tr>
+<tr id="Params-CheckParams-valid_duration">
+<td><code>validDuration</code></td>
+<td><code><a href="https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration">google.protobuf.Duration</a></code></td>
+<td>
+<p>Valid duration of the check result.</p>
+
+</td>
+</tr>
+<tr id="Params-CheckParams-valid_count">
+<td><code>validCount</code></td>
+<td><code>int64</code></td>
+<td>
+<p>Valid request count of the check result.</p>
+
+</td>
+</tr>
 <tr id="Params-CheckParams-check_allow">
 <td><code>checkAllow</code></td>
 <td><code>bool</code></td>
