--- a/mixer/test/keyval/keyval.pb.html
+++ b/mixer/test/keyval/keyval.pb.html
@@ -14,6 +14,7 @@ number_of_entries: 1
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -24,13 +25,8 @@ number_of_entries: 1
 <p>Lookup table</p>
 
 </td>
-</tr>
-<tr id="Params-table">
-<td><code>table</code></td>
-<td><code>map&lt;string,&nbsp;string&gt;</code></td>
 <td>
-<p>Lookup table</p>
-
+No
 </td>
 </tr>
 </tbody>
