--- a/mixer/adapter/bypass/config/adapter.bypass.config.pb.html
+++ b/mixer/adapter/bypass/config/adapter.bypass.config.pb.html
@@ -38,6 +38,7 @@ params: RGFuJ3MgVG9vbHMgYXJlIGNvb2wh...
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -48,29 +49,8 @@ params: RGFuJ3MgVG9vbHMgYXJlIGNvb2wh...
 <p>The backend address for the remote policy backend.</p>
 
 </td>
-</tr>
-<tr id="Params-params">
-<td><code>params</code></td>
-<td><code><a href="https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any">google.protobuf.Any</a></code></td>
 <td>
-<p>The actual config parameters to send to the remote backend.</p>
-
-</td>
-</tr>
-<tr id="Params-session_based">
-<td><code>sessionBased</code></td>
-<td><code>bool</code></td>
-<td>
-<p>Indicates whether the protocol is session based or not.</p>
-
-</td>
-</tr>
-<tr id="Params-backend_address">
-<td><code>backendAddress</code></td>
-<td><code>string</code></td>
-<td>
-<p>The backend address for the remote policy backend.</p>
-
+No
 </td>
 </tr>
 <tr id="Params-params">
@@ -80,6 +60,9 @@ params: RGFuJ3MgVG9vbHMgYXJlIGNvb2wh...
 <p>The actual config parameters to send to the remote backend.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-session_based">
 <td><code>sessionBased</code></td>
@@ -87,6 +70,9 @@ params: RGFuJ3MgVG9vbHMgYXJlIGNvb2wh...
 <td>
 <p>Indicates whether the protocol is session based or not.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
