--- a/mixer/adapter/circonus/config/adapter.circonus.config.pb.html
+++ b/mixer/adapter/circonus/config/adapter.circonus.config.pb.html
@@ -24,6 +24,7 @@ number_of_entries: 3
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -34,31 +35,26 @@ number_of_entries: 3
 <p>Circonus SubmissionURL to HTTPTrap check</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-submission_interval">
 <td><code>submissionInterval</code></td>
 <td><code><a href="https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration">google.protobuf.Duration</a></code></td>
 <td>
 </td>
-</tr>
-<tr id="Params-metrics">
-<td><code>metrics</code></td>
-<td><code><a href="#Params-MetricInfo">Params.MetricInfo[]</a></code></td>
 <td>
-</td>
-</tr>
-<tr id="Params-submission_url">
-<td><code>submissionUrl</code></td>
-<td><code>string</code></td>
-<td>
-<p>Circonus SubmissionURL to HTTPTrap check</p>
-
+No
 </td>
 </tr>
 <tr id="Params-metrics">
 <td><code>metrics</code></td>
 <td><code><a href="#Params-MetricInfo">Params.MetricInfo[]</a></code></td>
 <td>
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -74,6 +70,7 @@ number_of_entries: 3
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -84,25 +81,17 @@ number_of_entries: 3
 <p>name</p>
 
 </td>
-</tr>
-<tr id="Params-MetricInfo-type">
-<td><code>type</code></td>
-<td><code><a href="#Params-MetricInfo-Type">Params.MetricInfo.Type</a></code></td>
 <td>
-</td>
-</tr>
-<tr id="Params-MetricInfo-name">
-<td><code>name</code></td>
-<td><code>string</code></td>
-<td>
-<p>name</p>
-
+No
 </td>
 </tr>
 <tr id="Params-MetricInfo-type">
 <td><code>type</code></td>
 <td><code><a href="#Params-MetricInfo-Type">Params.MetricInfo.Type</a></code></td>
 <td>
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -120,26 +109,6 @@ number_of_entries: 3
 </tr>
 </thead>
 <tbody>
-<tr id="Params-MetricInfo-Type-UNKNOWN">
-<td><code>UNKNOWN</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricInfo-Type-COUNTER">
-<td><code>COUNTER</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricInfo-Type-GAUGE">
-<td><code>GAUGE</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricInfo-Type-DISTRIBUTION">
-<td><code>DISTRIBUTION</code></td>
-<td>
-</td>
-</tr>
 <tr id="Params-MetricInfo-Type-UNKNOWN">
 <td><code>UNKNOWN</code></td>
 <td>
