--- a/mixer/adapter/cloudwatch/config/adapter.cloudwatch.config.pb.html
+++ b/mixer/adapter/cloudwatch/config/adapter.cloudwatch.config.pb.html
@@ -33,6 +33,7 @@ The metrics specified in both instance and handler configurations will be sent t
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -43,45 +44,8 @@ The metrics specified in both instance and handler configurations will be sent t
 <p>CloudWatch metric namespace.</p>
 
 </td>
-</tr>
-<tr id="Params-metric_info">
-<td><code>metricInfo</code></td>
-<td><code>map&lt;string,&nbsp;<a href="#Params-MetricDatum">Params.MetricDatum</a>&gt;</code></td>
 <td>
-<p>A map of Istio metric name to CloudWatch metric info.</p>
-
-</td>
-</tr>
-<tr id="Params-log_group_name">
-<td><code>logGroupName</code></td>
-<td><code>string</code></td>
-<td>
-<p>The name of the log group in cloudwatchlogs.</p>
-
-</td>
-</tr>
-<tr id="Params-log_stream_name">
-<td><code>logStreamName</code></td>
-<td><code>string</code></td>
-<td>
-<p>The name of the log stream in cloudwatchlogs.</p>
-
-</td>
-</tr>
-<tr id="Params-logs">
-<td><code>logs</code></td>
-<td><code>map&lt;string,&nbsp;<a href="#Params-LogInfo">Params.LogInfo</a>&gt;</code></td>
-<td>
-<p>A map of Istio logentry name to CloudWatch logentry info.</p>
-
-</td>
-</tr>
-<tr id="Params-namespace">
-<td><code>namespace</code></td>
-<td><code>string</code></td>
-<td>
-<p>CloudWatch metric namespace.</p>
-
+No
 </td>
 </tr>
 <tr id="Params-metric_info">
@@ -91,6 +55,9 @@ The metrics specified in both instance and handler configurations will be sent t
 <p>A map of Istio metric name to CloudWatch metric info.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-log_group_name">
 <td><code>logGroupName</code></td>
@@ -98,6 +65,9 @@ The metrics specified in both instance and handler configurations will be sent t
 <td>
 <p>The name of the log group in cloudwatchlogs.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-log_stream_name">
@@ -107,6 +77,9 @@ The metrics specified in both instance and handler configurations will be sent t
 <p>The name of the log stream in cloudwatchlogs.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-logs">
 <td><code>logs</code></td>
@@ -114,6 +87,9 @@ The metrics specified in both instance and handler configurations will be sent t
 <td>
 <p>A map of Istio logentry name to CloudWatch logentry info.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -127,6 +103,7 @@ The metrics specified in both instance and handler configurations will be sent t
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -138,14 +115,8 @@ The metrics specified in both instance and handler configurations will be sent t
 It will be given the full set of variables for the log to use to construct its result.</p>
 
 </td>
-</tr>
-<tr id="Params-LogInfo-payload_template">
-<td><code>payloadTemplate</code></td>
-<td><code>string</code></td>
 <td>
-<p>A golang text/template template that will be executed to construct the payload for this log entry.
-It will be given the full set of variables for the log to use to construct its result.</p>
-
+No
 </td>
 </tr>
 </tbody>
@@ -161,6 +132,7 @@ It will be given the full set of variables for the log to use to construct its r
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -172,14 +144,8 @@ It will be given the full set of variables for the log to use to construct its r
 <a href="https://docs.aws.amazon.com/AmazonCloudWatch/latest/APIReference/API_MetricDatum.html">CloudWatch docs</a></p>
 
 </td>
-</tr>
-<tr id="Params-MetricDatum-unit">
-<td><code>unit</code></td>
-<td><code><a href="#Params-MetricDatum-Unit">Params.MetricDatum.Unit</a></code></td>
 <td>
-<p>The unit of the metric. Must be valid cloudwatch unit value.
-<a href="https://docs.aws.amazon.com/AmazonCloudWatch/latest/APIReference/API_MetricDatum.html">CloudWatch docs</a></p>
-
+No
 </td>
 </tr>
 </tbody>
@@ -195,141 +161,6 @@ It will be given the full set of variables for the log to use to construct its r
 </tr>
 </thead>
 <tbody>
-<tr id="Params-MetricDatum-Unit-None">
-<td><code>None</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Seconds">
-<td><code>Seconds</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Microseconds">
-<td><code>Microseconds</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Milliseconds">
-<td><code>Milliseconds</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Count">
-<td><code>Count</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Bytes">
-<td><code>Bytes</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Kilobytes">
-<td><code>Kilobytes</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Megabytes">
-<td><code>Megabytes</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Gigabytes">
-<td><code>Gigabytes</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Terabytes">
-<td><code>Terabytes</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Bits">
-<td><code>Bits</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Kilobits">
-<td><code>Kilobits</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Megabits">
-<td><code>Megabits</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Gigabits">
-<td><code>Gigabits</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Terabits">
-<td><code>Terabits</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Percent">
-<td><code>Percent</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Bytes_Second">
-<td><code>Bytes_Second</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Kilobytes_Second">
-<td><code>Kilobytes_Second</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Megabytes_Second">
-<td><code>Megabytes_Second</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Gigabytes_Second">
-<td><code>Gigabytes_Second</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Terabytes_Second">
-<td><code>Terabytes_Second</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Bits_Second">
-<td><code>Bits_Second</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Kilobits_Second">
-<td><code>Kilobits_Second</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Megabits_Second">
-<td><code>Megabits_Second</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Gigabits_Second">
-<td><code>Gigabits_Second</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Terabits_Second">
-<td><code>Terabits_Second</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricDatum-Unit-Count_Second">
-<td><code>Count_Second</code></td>
-<td>
-</td>
-</tr>
 <tr id="Params-MetricDatum-Unit-None">
 <td><code>None</code></td>
 <td>
