--- a/mixer/adapter/list/config/adapter.list.config.pb.html
+++ b/mixer/adapter/list/config/adapter.list.config.pb.html
@@ -26,6 +26,7 @@ IP addresses, or regex patterns.</p>
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -36,6 +37,9 @@ IP addresses, or regex patterns.</p>
 <p>Where to find the list to check against. This may be omitted for a completely local list.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-refresh_interval">
 <td><code>refreshInterval</code></td>
@@ -44,6 +48,9 @@ IP addresses, or regex patterns.</p>
 <p>Determines how often the provider is polled for
 an updated list</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-ttl">
@@ -56,6 +63,9 @@ refresh interval to ensure continued operation in the face of transient
 server outages.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-caching_interval">
 <td><code>cachingInterval</code></td>
@@ -65,46 +75,8 @@ server outages.</p>
 before it should ask the adapter again.</p>
 
 </td>
-</tr>
-<tr id="Params-caching_use_count">
-<td><code>cachingUseCount</code></td>
-<td><code>int32</code></td>
 <td>
-<p>Indicates the number of times a caller of this adapter can use a cached answer
-before it should ask the adapter again.</p>
-
-</td>
-</tr>
-<tr id="Params-overrides">
-<td><code>overrides</code></td>
-<td><code>string[]</code></td>
-<td>
-<p>List entries that are consulted first, before the list from the server</p>
-
-</td>
-</tr>
-<tr id="Params-entry_type">
-<td><code>entryType</code></td>
-<td><code><a href="#Params-ListEntryType">Params.ListEntryType</a></code></td>
-<td>
-<p>Determines the kind of list entry and overrides.</p>
-
-</td>
-</tr>
-<tr id="Params-blacklist">
-<td><code>blacklist</code></td>
-<td><code>bool</code></td>
-<td>
-<p>Whether the list operates as a blacklist or a whitelist.</p>
-
-</td>
-</tr>
-<tr id="Params-provider_url">
-<td><code>providerUrl</code></td>
-<td><code>string</code></td>
-<td>
-<p>Where to find the list to check against. This may be omitted for a completely local list.</p>
-
+No
 </td>
 </tr>
 <tr id="Params-caching_use_count">
@@ -115,6 +87,9 @@ before it should ask the adapter again.</p>
 before it should ask the adapter again.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-overrides">
 <td><code>overrides</code></td>
@@ -122,6 +97,9 @@ before it should ask the adapter again.</p>
 <td>
 <p>List entries that are consulted first, before the list from the server</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-entry_type">
@@ -131,6 +109,9 @@ before it should ask the adapter again.</p>
 <p>Determines the kind of list entry and overrides.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-blacklist">
 <td><code>blacklist</code></td>
@@ -138,6 +119,9 @@ before it should ask the adapter again.</p>
 <td>
 <p>Whether the list operates as a blacklist or a whitelist.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -155,34 +139,6 @@ before it should ask the adapter again.</p>
 </tr>
 </thead>
 <tbody>
-<tr id="Params-ListEntryType-STRINGS">
-<td><code>STRINGS</code></td>
-<td>
-<p>List entries are treated as plain strings.</p>
-
-</td>
-</tr>
-<tr id="Params-ListEntryType-CASE_INSENSITIVE_STRINGS">
-<td><code>CASE_INSENSITIVE_STRINGS</code></td>
-<td>
-<p>List entries are treated as case-insensitive strings.</p>
-
-</td>
-</tr>
-<tr id="Params-ListEntryType-IP_ADDRESSES">
-<td><code>IP_ADDRESSES</code></td>
-<td>
-<p>List entries are treated as IP addresses and ranges.</p>
-
-</td>
-</tr>
-<tr id="Params-ListEntryType-REGEX">
-<td><code>REGEX</code></td>
-<td>
-<p>List entries are treated as re2 regexp. See <a href="https://github.com/google/re2/wiki/Syntax">here</a> for the supported syntax.</p>
-
-</td>
-</tr>
 <tr id="Params-ListEntryType-STRINGS">
 <td><code>STRINGS</code></td>
 <td>
