--- a/mixer/adapter/memquota/config/adapter.memquota.config.pb.html
+++ b/mixer/adapter/memquota/config/adapter.memquota.config.pb.html
@@ -29,6 +29,7 @@ be lost.</p>
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -39,6 +40,9 @@ be lost.</p>
 <p>The set of known quotas.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-min_deduplication_duration">
 <td><code>minDeduplicationDuration</code></td>
@@ -46,6 +50,9 @@ be lost.</p>
 <td>
 <p>Minimum number of seconds that deduplication is possible for a given operation.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -62,6 +69,7 @@ a particular quota request, the default for the quota is used.</p>
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -73,6 +81,9 @@ a particular quota request, the default for the quota is used.</p>
 String representation of instance dimensions is used to check against configured dimensions.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-Override-max_amount">
 <td><code>maxAmount</code></td>
@@ -80,6 +91,9 @@ String representation of instance dimensions is used to check against configured
 <td>
 <p>The upper limit for this quota.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-Override-valid_duration">
@@ -91,22 +105,8 @@ automatically released. This is only meaningful for rate limit
 quotas, otherwise the value must be zero.</p>
 
 </td>
-</tr>
-<tr id="Params-Override-dimensions">
-<td><code>dimensions</code></td>
-<td><code>map&lt;string,&nbsp;string&gt;</code></td>
 <td>
-<p>The specific dimensions for which this override applies.
-String representation of instance dimensions is used to check against configured dimensions.</p>
-
-</td>
-</tr>
-<tr id="Params-Override-max_amount">
-<td><code>maxAmount</code></td>
-<td><code>int64</code></td>
-<td>
-<p>The upper limit for this quota.</p>
-
+No
 </td>
 </tr>
 </tbody>
@@ -122,6 +122,7 @@ String representation of instance dimensions is used to check against configured
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -132,6 +133,9 @@ String representation of instance dimensions is used to check against configured
 <p>The name of the quota</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-Quota-max_amount">
 <td><code>maxAmount</code></td>
@@ -139,6 +143,9 @@ String representation of instance dimensions is used to check against configured
 <td>
 <p>The upper limit for this quota.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-Quota-valid_duration">
@@ -150,6 +157,9 @@ automatically released. This is only meaningful for rate limit
 quotas, otherwise the value must be zero.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-Quota-overrides">
 <td><code>overrides</code></td>
@@ -159,21 +169,8 @@ quotas, otherwise the value must be zero.</p>
 The first matching override is applied.</p>
 
 </td>
-</tr>
-<tr id="Params-Quota-name">
-<td><code>name</code></td>
-<td><code>string</code></td>
 <td>
-<p>The name of the quota</p>
-
-</td>
-</tr>
-<tr id="Params-Quota-max_amount">
-<td><code>maxAmount</code></td>
-<td><code>int64</code></td>
-<td>
-<p>The upper limit for this quota.</p>
-
+No
 </td>
 </tr>
 </tbody>
