--- a/mixer/adapter/opa/config/adapter.opa.config.pb.html
+++ b/mixer/adapter/opa/config/adapter.opa.config.pb.html
@@ -53,6 +53,7 @@ failClose: true
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -63,6 +64,9 @@ failClose: true
 <p>List of OPA policies</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-check_method">
 <td><code>checkMethod</code></td>
@@ -71,6 +75,9 @@ failClose: true
 <p>Query method to check.
 Format: <code>data.&lt;package name&gt;.&lt;method name&gt;</code></p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-fail_close">
@@ -82,32 +89,8 @@ If failClose is set to true and there is a runtime error,
 instead of disabling the adapter, close the client request</p>
 
 </td>
-</tr>
-<tr id="Params-policy">
-<td><code>policy</code></td>
-<td><code>string[]</code></td>
 <td>
-<p>List of OPA policies</p>
-
-</td>
-</tr>
-<tr id="Params-check_method">
-<td><code>checkMethod</code></td>
-<td><code>string</code></td>
-<td>
-<p>Query method to check.
-Format: <code>data.&lt;package name&gt;.&lt;method name&gt;</code></p>
-
-</td>
-</tr>
-<tr id="Params-fail_close">
-<td><code>failClose</code></td>
-<td><code>bool</code></td>
-<td>
-<p>Close the client request when adapter has a issue.
-If failClose is set to true and there is a runtime error,
-instead of disabling the adapter, close the client request</p>
-
+No
 </td>
 </tr>
 </tbody>
