--- a/mixer/adapter/prometheus/config/adapter.prometheus.config.pb.html
+++ b/mixer/adapter/prometheus/config/adapter.prometheus.config.pb.html
@@ -24,6 +24,7 @@ number_of_entries: 8
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -35,32 +36,8 @@ number_of_entries: 8
 shape here, it will not be populated at runtime.</p>
 
 </td>
-</tr>
-<tr id="Params-metrics_expiration_policy">
-<td><code>metricsExpirationPolicy</code></td>
-<td><code><a href="#Params-MetricsExpirationPolicy">Params.MetricsExpirationPolicy</a></code></td>
 <td>
-<p>Optional. The rate at which to expire metrics from the adapter. This option controls the amount of metric data
-that the adapter will maintain over its lifetime.</p>
-
-<p>EXPERIMENTAL: This feature should only be used in advanced cases.</p>
-
-<p>Example config stanza:</p>
-
-<pre><code class="language-yaml">metricsExpirationPolicy:
-  metricsExpiryDuration: &quot;5s&quot;
-  expiryCheckIntervalDuration: &quot;1s&quot;
-</code></pre>
-
-</td>
-</tr>
-<tr id="Params-metrics">
-<td><code>metrics</code></td>
-<td><code><a href="#Params-MetricInfo">Params.MetricInfo[]</a></code></td>
-<td>
-<p>The set of metrics to represent in Prometheus. If a metric is defined in Istio but doesn&rsquo;t have a corresponding
-shape here, it will not be populated at runtime.</p>
-
+No
 </td>
 </tr>
 <tr id="Params-metrics_expiration_policy">
@@ -79,6 +56,9 @@ that the adapter will maintain over its lifetime.</p>
   expiryCheckIntervalDuration: &quot;1s&quot;
 </code></pre>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -94,6 +74,7 @@ that the adapter will maintain over its lifetime.</p>
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -111,6 +92,9 @@ and should be used with caution.
 Default value: <code>istio</code>.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-MetricInfo-name">
 <td><code>name</code></td>
@@ -121,6 +105,9 @@ It must be unique across all prometheus metrics as prometheus does not allow dup
 If name is not specified a sanitized version of instance_name is used.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-MetricInfo-instance_name">
 <td><code>instanceName</code></td>
@@ -130,6 +117,9 @@ If name is not specified a sanitized version of instance_name is used.</p>
 that this MetricInfo processes.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-MetricInfo-description">
 <td><code>description</code></td>
@@ -138,11 +128,17 @@ that this MetricInfo processes.</p>
 <p>Optional. A human readable description of this metric.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-MetricInfo-kind">
 <td><code>kind</code></td>
 <td><code><a href="#Params-MetricInfo-Kind">Params.MetricInfo.Kind</a></code></td>
 <td>
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-MetricInfo-buckets">
@@ -155,73 +151,8 @@ This field must be provided for metrics declared to be of type DISTRIBUTION.
 This field will be ignored for non-distribution metric kinds.</p>
 
 </td>
-</tr>
-<tr id="Params-MetricInfo-label_names">
-<td><code>labelNames</code></td>
-<td><code>string[]</code></td>
 <td>
-<p>The names of labels to use: these need to match the dimensions of the Istio metric.
-TODO: see if we can remove this and rely on only the dimensions in the future.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricInfo-namespace">
-<td><code>namespace</code></td>
-<td><code>string</code></td>
-<td>
-<p>Optional. The namespace is used as a prefix on the metric names.
-An example: for a metric named <code>requests_total</code> with a namespace of <code>istio</code>,
-the full metric name becomes <code>istio_requests_total</code>.
-NOTE: The specified namespace should be a prometheus-safe name. If not, the adapter
-will attempt to convert the namespace to a prometheus-safe name.
-NOTE: Changing the value for this will potentially impact downstream integrations
-and should be used with caution.
-Default value: <code>istio</code>.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricInfo-name">
-<td><code>name</code></td>
-<td><code>string</code></td>
-<td>
-<p>Recommended. The name is used to register the prometheus metric.
-It must be unique across all prometheus metrics as prometheus does not allow duplicate names.
-If name is not specified a sanitized version of instance_name is used.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricInfo-instance_name">
-<td><code>instanceName</code></td>
-<td><code>string</code></td>
-<td>
-<p>Required. The name is the fully qualified name of the Istio metric instance
-that this MetricInfo processes.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricInfo-description">
-<td><code>description</code></td>
-<td><code>string</code></td>
-<td>
-<p>Optional. A human readable description of this metric.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricInfo-kind">
-<td><code>kind</code></td>
-<td><code><a href="#Params-MetricInfo-Kind">Params.MetricInfo.Kind</a></code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricInfo-buckets">
-<td><code>buckets</code></td>
-<td><code><a href="#Params-MetricInfo-BucketsDefinition">Params.MetricInfo.BucketsDefinition</a></code></td>
-<td>
-<p>For metrics with a metric kind of DISTRIBUTION, this provides a mechanism
-for configuring the buckets that will be used to store the aggregated values.
-This field must be provided for metrics declared to be of type DISTRIBUTION.
-This field will be ignored for non-distribution metric kinds.</p>
-
+No
 </td>
 </tr>
 <tr id="Params-MetricInfo-label_names">
@@ -231,6 +162,9 @@ This field will be ignored for non-distribution metric kinds.</p>
 <p>The names of labels to use: these need to match the dimensions of the Istio metric.
 TODO: see if we can remove this and rely on only the dimensions in the future.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -246,6 +180,7 @@ TODO: see if we can remove this and rely on only the dimensions in the future.</
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -256,29 +191,8 @@ TODO: see if we can remove this and rely on only the dimensions in the future.</
 <p>The linear buckets.</p>
 
 </td>
-</tr>
-<tr id="Params-MetricInfo-BucketsDefinition-exponential_buckets" class="oneof">
-<td><code>exponentialBuckets</code></td>
-<td><code><a href="#Params-MetricInfo-BucketsDefinition-Exponential">Params.MetricInfo.BucketsDefinition.Exponential (oneof)</a></code></td>
 <td>
-<p>The exponential buckets.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricInfo-BucketsDefinition-explicit_buckets" class="oneof">
-<td><code>explicitBuckets</code></td>
-<td><code><a href="#Params-MetricInfo-BucketsDefinition-Explicit">Params.MetricInfo.BucketsDefinition.Explicit (oneof)</a></code></td>
-<td>
-<p>The explicit buckets.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricInfo-BucketsDefinition-linear_buckets" class="oneof oneof-start">
-<td><code>linearBuckets</code></td>
-<td><code><a href="#Params-MetricInfo-BucketsDefinition-Linear">Params.MetricInfo.BucketsDefinition.Linear (oneof)</a></code></td>
-<td>
-<p>The linear buckets.</p>
-
+Yes
 </td>
 </tr>
 <tr id="Params-MetricInfo-BucketsDefinition-exponential_buckets" class="oneof">
@@ -288,6 +202,9 @@ TODO: see if we can remove this and rely on only the dimensions in the future.</
 <p>The exponential buckets.</p>
 
 </td>
+<td>
+Yes
+</td>
 </tr>
 <tr id="Params-MetricInfo-BucketsDefinition-explicit_buckets" class="oneof">
 <td><code>explicitBuckets</code></td>
@@ -295,6 +212,9 @@ TODO: see if we can remove this and rely on only the dimensions in the future.</
 <td>
 <p>The explicit buckets.</p>
 
+</td>
+<td>
+Yes
 </td>
 </tr>
 </tbody>
@@ -322,6 +242,7 @@ element is the common boundary of the overflow and underflow buckets.</p>
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -332,13 +253,8 @@ element is the common boundary of the overflow and underflow buckets.</p>
 <p>The values must be monotonically increasing.</p>
 
 </td>
-</tr>
-<tr id="Params-MetricInfo-BucketsDefinition-Explicit-bounds">
-<td><code>bounds</code></td>
-<td><code>double[]</code></td>
 <td>
-<p>The values must be monotonically increasing.</p>
-
+No
 </td>
 </tr>
 </tbody>
@@ -366,6 +282,7 @@ buckets are the underflow and overflow buckets.</p>
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -376,29 +293,8 @@ buckets are the underflow and overflow buckets.</p>
 <p>Must be greater than 0.</p>
 
 </td>
-</tr>
-<tr id="Params-MetricInfo-BucketsDefinition-Exponential-growth_factor">
-<td><code>growthFactor</code></td>
-<td><code>double</code></td>
 <td>
-<p>Must be greater than 1.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricInfo-BucketsDefinition-Exponential-scale">
-<td><code>scale</code></td>
-<td><code>double</code></td>
-<td>
-<p>Must be greater than 0.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricInfo-BucketsDefinition-Exponential-num_finite_buckets">
-<td><code>numFiniteBuckets</code></td>
-<td><code>int32</code></td>
-<td>
-<p>Must be greater than 0.</p>
-
+No
 </td>
 </tr>
 <tr id="Params-MetricInfo-BucketsDefinition-Exponential-growth_factor">
@@ -408,6 +304,9 @@ buckets are the underflow and overflow buckets.</p>
 <p>Must be greater than 1.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-MetricInfo-BucketsDefinition-Exponential-scale">
 <td><code>scale</code></td>
@@ -415,6 +314,9 @@ buckets are the underflow and overflow buckets.</p>
 <td>
 <p>Must be greater than 0.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -442,6 +344,7 @@ buckets are the underflow and overflow buckets.</p>
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -452,29 +355,8 @@ buckets are the underflow and overflow buckets.</p>
 <p>Must be greater than 0.</p>
 
 </td>
-</tr>
-<tr id="Params-MetricInfo-BucketsDefinition-Linear-width">
-<td><code>width</code></td>
-<td><code>double</code></td>
 <td>
-<p>Must be greater than 0.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricInfo-BucketsDefinition-Linear-offset">
-<td><code>offset</code></td>
-<td><code>double</code></td>
-<td>
-<p>Lower bound of the first bucket.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricInfo-BucketsDefinition-Linear-num_finite_buckets">
-<td><code>numFiniteBuckets</code></td>
-<td><code>int32</code></td>
-<td>
-<p>Must be greater than 0.</p>
-
+No
 </td>
 </tr>
 <tr id="Params-MetricInfo-BucketsDefinition-Linear-width">
@@ -484,6 +366,9 @@ buckets are the underflow and overflow buckets.</p>
 <p>Must be greater than 0.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-MetricInfo-BucketsDefinition-Linear-offset">
 <td><code>offset</code></td>
@@ -491,6 +376,9 @@ buckets are the underflow and overflow buckets.</p>
 <td>
 <p>Lower bound of the first bucket.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -528,26 +416,6 @@ buckets are the underflow and overflow buckets.</p>
 <td>
 </td>
 </tr>
-<tr id="Params-MetricInfo-Kind-UNSPECIFIED">
-<td><code>UNSPECIFIED</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricInfo-Kind-GAUGE">
-<td><code>GAUGE</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricInfo-Kind-COUNTER">
-<td><code>COUNTER</code></td>
-<td>
-</td>
-</tr>
-<tr id="Params-MetricInfo-Kind-DISTRIBUTION">
-<td><code>DISTRIBUTION</code></td>
-<td>
-</td>
-</tr>
 </tbody>
 </table>
 </section>
@@ -565,6 +433,7 @@ every minute to determine whether or not they should be expired.</p>
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -576,6 +445,9 @@ every minute to determine whether or not they should be expired.</p>
 will be removed from the set of metrics exported by the handler.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-MetricsExpirationPolicy-expiry_check_interval_duration">
 <td><code>expiryCheckIntervalDuration</code></td>
@@ -586,6 +458,9 @@ will be removed from the set of metrics exported by the handler.</p>
 This bounds the total amount of additional time (beyond the desired lifetime) that a metric may be exported.
 If a value is not explicitly provided, this value will default to half of the configured <code>metrics_expiry_duration</code>.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
