--- a/mixer/adapter/redisquota/config/adapter.redisquota.config.pb.html
+++ b/mixer/adapter/redisquota/config/adapter.redisquota.config.pb.html
@@ -45,6 +45,7 @@ quotas:
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -55,23 +56,8 @@ quotas:
 <p>The set of known quotas. At least one quota configuration is required</p>
 
 </td>
-</tr>
-<tr id="Params-redis_server_url">
-<td><code>redisServerUrl</code></td>
-<td><code>string</code></td>
 <td>
-<p>Redis connection string <code>&lt;hostname&gt;:&lt;port number&gt;</code>
-ex) localhost:6379</p>
-
-</td>
-</tr>
-<tr id="Params-connection_pool_size">
-<td><code>connectionPoolSize</code></td>
-<td><code>int64</code></td>
-<td>
-<p>Maximum number of idle connections to redis
-Default is 10 connections per every CPU as reported by runtime.NumCPU.</p>
-
+No
 </td>
 </tr>
 <tr id="Params-redis_server_url">
@@ -82,6 +68,9 @@ Default is 10 connections per every CPU as reported by runtime.NumCPU.</p>
 ex) localhost:6379</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-connection_pool_size">
 <td><code>connectionPoolSize</code></td>
@@ -90,6 +79,9 @@ ex) localhost:6379</p>
 <p>Maximum number of idle connections to redis
 Default is 10 connections per every CPU as reported by runtime.NumCPU.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -103,6 +95,7 @@ Default is 10 connections per every CPU as reported by runtime.NumCPU.</p>
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -115,14 +108,8 @@ String representation of instance dimensions is used to check against configured
 <code>dimensions</code> should not be empty</p>
 
 </td>
-</tr>
-<tr id="Params-Override-max_amount">
-<td><code>maxAmount</code></td>
-<td><code>int64</code></td>
 <td>
-<p>The upper limit for this quota override.
-This value should be bigger than 0</p>
-
+No
 </td>
 </tr>
 <tr id="Params-Override-max_amount">
@@ -132,6 +119,9 @@ This value should be bigger than 0</p>
 <p>The upper limit for this quota override.
 This value should be bigger than 0</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -145,6 +135,7 @@ This value should be bigger than 0</p>
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -155,6 +146,9 @@ This value should be bigger than 0</p>
 <p>The name of the quota</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-Quota-max_amount">
 <td><code>maxAmount</code></td>
@@ -162,6 +156,9 @@ This value should be bigger than 0</p>
 <td>
 <p>The upper limit for this quota. max_amount should be bigger than 0</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-Quota-valid_duration">
@@ -173,6 +170,9 @@ automatically released. This is only meaningful for rate limit quotas.
 value should be <code>0 &lt; validDuration</code></p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-Quota-bucket_duration">
 <td><code>bucketDuration</code></td>
@@ -182,6 +182,9 @@ value should be <code>0 &lt; validDuration</code></p>
 value should be <code>0 &lt; bucketDuration &lt; validDuration</code></p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-Quota-rate_limit_algorithm">
 <td><code>rateLimitAlgorithm</code></td>
@@ -189,6 +192,9 @@ value should be <code>0 &lt; bucketDuration &lt; validDuration</code></p>
 <td>
 <p>Quota management algorithm. The default value is <code>FIXED_WINDOW</code></p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-Quota-overrides">
@@ -199,38 +205,8 @@ value should be <code>0 &lt; bucketDuration &lt; validDuration</code></p>
 The first matching override is applied.</p>
 
 </td>
-</tr>
-<tr id="Params-Quota-name">
-<td><code>name</code></td>
-<td><code>string</code></td>
 <td>
-<p>The name of the quota</p>
-
-</td>
-</tr>
-<tr id="Params-Quota-max_amount">
-<td><code>maxAmount</code></td>
-<td><code>int64</code></td>
-<td>
-<p>The upper limit for this quota. max_amount should be bigger than 0</p>
-
-</td>
-</tr>
-<tr id="Params-Quota-rate_limit_algorithm">
-<td><code>rateLimitAlgorithm</code></td>
-<td><code><a href="#Params-QuotaAlgorithm">Params.QuotaAlgorithm</a></code></td>
-<td>
-<p>Quota management algorithm. The default value is <code>FIXED_WINDOW</code></p>
-
-</td>
-</tr>
-<tr id="Params-Quota-overrides">
-<td><code>overrides</code></td>
-<td><code><a href="#Params-Override">Params.Override[]</a></code></td>
-<td>
-<p>Overrides associated with this quota.
-The first matching override is applied.</p>
-
+No
 </td>
 </tr>
 </tbody>
@@ -248,20 +224,6 @@ The first matching override is applied.</p>
 </tr>
 </thead>
 <tbody>
-<tr id="Params-QuotaAlgorithm-FIXED_WINDOW">
-<td><code>FIXED_WINDOW</code></td>
-<td>
-<p><code>FIXED_WINDOW</code> The fixed window approach can allow 2x peak specified rate, whereas the rolling-window doesn&rsquo;t.</p>
-
-</td>
-</tr>
-<tr id="Params-QuotaAlgorithm-ROLLING_WINDOW">
-<td><code>ROLLING_WINDOW</code></td>
-<td>
-<p><code>ROLLING_WINDOW</code> The rolling window algorithm&rsquo;s additional precision comes at the cost of increased redis resource usage.</p>
-
-</td>
-</tr>
 <tr id="Params-QuotaAlgorithm-FIXED_WINDOW">
 <td><code>FIXED_WINDOW</code></td>
 <td>
