--- a/mixer/adapter/signalfx/config/adapter.signalfx.config.pb.html
+++ b/mixer/adapter/signalfx/config/adapter.signalfx.config.pb.html
@@ -78,6 +78,7 @@ spec:
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -90,6 +91,9 @@ configured to be sent to this adapter, it must have a corresponding
 description here.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-ingest_url">
 <td><code>ingestUrl</code></td>
@@ -99,6 +103,9 @@ description here.</p>
 the global ingest server if not specified.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-access_token">
 <td><code>accessToken</code></td>
@@ -107,6 +114,9 @@ the global ingest server if not specified.</p>
 <p>Required. The access token for the SignalFx organization that should
 receive the metrics.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-datapoint_interval">
@@ -119,6 +129,9 @@ This will be rounded to the nearest second and rounded values less than
 one second are not valid. Defaults to 10 seconds if not specified.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-enable_metrics">
 <td><code>enableMetrics</code></td>
@@ -127,6 +140,9 @@ one second are not valid. Defaults to 10 seconds if not specified.</p>
 <p>Optional.  If set to false, metrics won&rsquo;t be sent (but trace spans will
 be sent, unless otherwise disabled).</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-enable_tracing">
@@ -137,6 +153,9 @@ be sent, unless otherwise disabled).</p>
 be sent, unless otherwise disabled).</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Params-tracing_buffer_size">
 <td><code>tracingBufferSize</code></td>
@@ -146,6 +165,9 @@ be sent, unless otherwise disabled).</p>
 dropping them.  This defaults to 1000 spans but can be configured higher
 if needed.  An error message will be logged if spans are dropped.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Params-tracing_sample_probability">
@@ -158,72 +180,8 @@ be sampled if their parent is.  If not provided, defaults to sending all
 spans.</p>
 
 </td>
-</tr>
-<tr id="Params-metrics">
-<td><code>metrics</code></td>
-<td><code><a href="#Params-MetricConfig">Params.MetricConfig[]</a></code></td>
 <td>
-<p>Required. The set of metrics to send to SignalFx. If an Istio metric is
-configured to be sent to this adapter, it must have a corresponding
-description here.</p>
-
-</td>
-</tr>
-<tr id="Params-ingest_url">
-<td><code>ingestUrl</code></td>
-<td><code>string</code></td>
-<td>
-<p>Optional. The URL of the SignalFx ingest server to use.  Will default to
-the global ingest server if not specified.</p>
-
-</td>
-</tr>
-<tr id="Params-access_token">
-<td><code>accessToken</code></td>
-<td><code>string</code></td>
-<td>
-<p>Required. The access token for the SignalFx organization that should
-receive the metrics.</p>
-
-</td>
-</tr>
-<tr id="Params-enable_metrics">
-<td><code>enableMetrics</code></td>
-<td><code>bool</code></td>
-<td>
-<p>Optional.  If set to false, metrics won&rsquo;t be sent (but trace spans will
-be sent, unless otherwise disabled).</p>
-
-</td>
-</tr>
-<tr id="Params-enable_tracing">
-<td><code>enableTracing</code></td>
-<td><code>bool</code></td>
-<td>
-<p>Optional.  If set to false, trace spans won&rsquo;t be sent (but metrics will
-be sent, unless otherwise disabled).</p>
-
-</td>
-</tr>
-<tr id="Params-tracing_buffer_size">
-<td><code>tracingBufferSize</code></td>
-<td><code>uint32</code></td>
-<td>
-<p>Optional.  The number of trace spans that the adapter will buffer before
-dropping them.  This defaults to 1000 spans but can be configured higher
-if needed.  An error message will be logged if spans are dropped.</p>
-
-</td>
-</tr>
-<tr id="Params-tracing_sample_probability">
-<td><code>tracingSampleProbability</code></td>
-<td><code>double</code></td>
-<td>
-<p>Optional. The uniform probability ([0.0, 1.0]) that a given span gets
-sampled if its parent was not already sampled.  Child spans will always
-be sampled if their parent is.  If not provided, defaults to sending all
-spans.</p>
-
+No
 </td>
 </tr>
 </tbody>
@@ -239,6 +197,7 @@ spans.</p>
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -252,24 +211,8 @@ Kubernetes this is of the form <code>&lt;name&gt;.metric.&lt;namespace&gt;</code
 is the namespace of the metric resource.</p>
 
 </td>
-</tr>
-<tr id="Params-MetricConfig-type">
-<td><code>type</code></td>
-<td><code><a href="#Params-MetricConfig-Type">Params.MetricConfig.Type</a></code></td>
 <td>
-<p>The metric type of the metric</p>
-
-</td>
-</tr>
-<tr id="Params-MetricConfig-name">
-<td><code>name</code></td>
-<td><code>string</code></td>
-<td>
-<p>Required.  The name of the metric as it is sent to the adapter.  In
-Kubernetes this is of the form <code>&lt;name&gt;.metric.&lt;namespace&gt;</code> where
-<code>&lt;name&gt;</code> is the name field of the metric resource, and <code>&lt;namespace&gt;</code>
-is the namespace of the metric resource.</p>
-
+No
 </td>
 </tr>
 <tr id="Params-MetricConfig-type">
@@ -278,6 +221,9 @@ is the namespace of the metric resource.</p>
 <td>
 <p>The metric type of the metric</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
@@ -295,29 +241,6 @@ is the namespace of the metric resource.</p>
 </tr>
 </thead>
 <tbody>
-<tr id="Params-MetricConfig-Type-NONE">
-<td><code>NONE</code></td>
-<td>
-<p>None is the default and is invalid</p>
-
-</td>
-</tr>
-<tr id="Params-MetricConfig-Type-COUNTER">
-<td><code>COUNTER</code></td>
-<td>
-<p>Values with the same set of dimensions will be added together
-as a continuously incrementing value.</p>
-
-</td>
-</tr>
-<tr id="Params-MetricConfig-Type-HISTOGRAM">
-<td><code>HISTOGRAM</code></td>
-<td>
-<p>A histogram distribution.  This will result in several metrics
-emitted for each unique set of dimensions.</p>
-
-</td>
-</tr>
 <tr id="Params-MetricConfig-Type-NONE">
 <td><code>NONE</code></td>
 <td>
