--- a/mixer/adapter/zipkin/config/adapter.zipkin.config.pb.html
+++ b/mixer/adapter/zipkin/config/adapter.zipkin.config.pb.html
@@ -22,6 +22,7 @@ number_of_entries: 1
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -34,26 +35,8 @@ number_of_entries: 1
 <p>Required.</p>
 
 </td>
-</tr>
-<tr id="Params-sample_probability">
-<td><code>sampleProbability</code></td>
-<td><code>double</code></td>
 <td>
-<p>Uniform probability that a trace will be sampled.
-Defaults to 0 (sampling disabled) if unset.</p>
-
-<p>Optional.</p>
-
-</td>
-</tr>
-<tr id="Params-url">
-<td><code>url</code></td>
-<td><code>string</code></td>
-<td>
-<p>URL of Zipkin HTTP endpoint.</p>
-
-<p>Required.</p>
-
+No
 </td>
 </tr>
 <tr id="Params-sample_probability">
@@ -65,6 +48,9 @@ Defaults to 0 (sampling disabled) if unset.</p>
 
 <p>Optional.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
