fix spelling mistakes

--- a/mixer/adapter/stackdriver/config/adapter.stackdriver.config.pb.html
+++ b/mixer/adapter/stackdriver/config/adapter.stackdriver.config.pb.html
@@ -424,7 +424,7 @@ No
 <td>
 <p>These fields apply only to UpdateSinkOpt calls. The corresponding sink field
 is updated if and only if the Update field is true.
-Upate sink destination.</p>
+Update sink destination.</p>
 
 </td>
 <td>
