--- a/mixer/adapter/stdio/config/adapter.stdio.config.pb.html
+++ b/mixer/adapter/stdio/config/adapter.stdio.config.pb.html
@@ -186,7 +186,7 @@ No
 <tr id="Params-Level-WARNING">
 <td><code>WARNING</code></td>
 <td>
-<p>warning and error log messges are included</p>
+<p>warning and error log messages are included</p>
 
 </td>
 </tr>
